--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures{
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -58,4 +62,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-installations-ktx:17.2.0'
     implementation 'com.google.firebase:firebase-inappmessaging-display-ktx:20.4.0'
     implementation 'com.google.firebase:firebase-bom:32.6.0'
+    implementation 'com.diogobernardino:williamchart:3.10.1'
+    implementation 'com.diogobernardino:williamchart:3.8.0'
+    implementation 'com.diogobernardino:williamchart:3.3.0'
+    implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
+
+
 }
