--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,6 @@ android {
         jvmTarget = '1.8'
     }
 
-    buildFeatures{
-        viewBinding true
-    }
 }
 
 dependencies {
@@ -68,5 +65,5 @@ dependencies {
     implementation 'com.diogobernardino:williamchart:3.3.0'
     implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
 
-
+    implementation 'com.paypal.checkout:android-sdk:1.1.0'
 }
