--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,11 @@ dependencies {
     implementation 'com.diogobernardino:williamchart:3.10.1'
     implementation 'com.diogobernardino:williamchart:3.8.0'
     implementation 'com.diogobernardino:williamchart:3.3.0'
+    implementation 'com.diogobernardino.williamchart:tooltip-slider:3.10.1'
+    implementation 'com.diogobernardino.williamchart:tooltip-points:3.10.1'
     implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
+    implementation 'com.db.chart:library:1.0.4@aar'
+
 
     implementation 'com.paypal.checkout:android-sdk:1.1.0'
 }
