--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:exported="true" />
         <activity
             android:name=".insight"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".budgetFragment"
             android:exported="false" />
