--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-common-ktx:20.3.3'
     implementation 'com.google.androidbrowserhelper:billing:1.0.0-alpha10'
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition-common:19.0.0'
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:19.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -71,39 +73,3 @@ dependencies {
     implementation 'com.paypal.checkout:android-sdk:1.1.0'
 }
 
-//dependencies {
-//
-//    implementation 'androidx.core:core-ktx:1.8.0'
-//    implementation 'androidx.appcompat:appcompat:1.6.1'
-//    implementation 'com.google.android.material:material:1.5.0'
-//    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-//    implementation 'com.google.firebase:firebase-common-ktx:20.3.3'
-//    implementation 'com.google.androidbrowserhelper:billing:1.0.0-alpha10'
-//    implementation 'androidx.navigation:navigation-ui:2.7.5'
-//    testImplementation 'junit:junit:4.13.2'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-//    implementation 'com.google.firebase:firebase-firestore-ktx:23.0.0' // Use the latest version
-//    implementation 'com.google.firebase:firebase-firestore-ktx:24.8.1'
-//    implementation 'com.google.firebase:firebase-auth-ktx:22.1.2'
-//    implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
-//    implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
-//    implementation 'com.google.firebase:firebase-storage:20.2.1'
-//    implementation 'com.google.firebase:firebase-auth-ktx:22.3.0'
-//    implementation 'com.google.firebase:firebase-firestore'
-//    implementation 'com.google.firebase:firebase-storage-ktx:20.3.0'
-//    def nav_version = "2.3.5" // Use the latest version
-//    implementation "androidx.navigation:navigation-fragment:$nav_version"
-//    implementation 'com.google.firebase:firebase-database-ktx:20.3.0'
-//    implementation 'com.google.firebase:firebase-installations-ktx:17.2.0'
-//    implementation 'com.google.firebase:firebase-inappmessaging-display-ktx:20.4.0'
-//    implementation 'com.google.firebase:firebase-bom:32.6.0'
-//    implementation 'com.diogobernardino:williamchart:3.10.1'
-//    implementation 'com.diogobernardino:williamchart:3.8.0'
-//    implementation 'com.diogobernardino:williamchart:3.3.0'
-//    implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
-//    implementation 'co.yml:ycharts:2.1.0'
-//
-//    implementation 'com.paypal.checkout:android-sdk:1.1.0'
-//
-//}
